# Cryptocurrency-Quantitative-Trading

./: .gitignore  .pre-commit-config.yaml  EVALUATION.md  IMPROVEMENT_REPORT.md  MIGRATION.md  README.md  pyproject.toml
.sisyphus/run-continuation/: ses_1d14e1136ffeZJhhcjPgAQVqmS.json
crypto_quant/: .env.example  .gitignore  benchmark.py  main.py  requirements.txt
crypto_quant/.streamlit/: config.toml
crypto_quant/backtest/: engine.py
crypto_quant/config/: __init__.py  constants.py  exchanges.yaml  settings.py
crypto_quant/core/: engine.py  event_bus.py
crypto_quant/dashboard/: app.py  chart_api.py  chart_service.py  common.py
crypto_quant/data/: exchange_configs.json  manager.py  processor.py  storage.py  trading.db
crypto_quant/exchange/: base.py  ccxt_connector.py  config_manager.py
crypto_quant/execution/: order_manager.py  simulator.py
crypto_quant/notification/: notifier.py
crypto_quant/portfolio/: tracker.py
crypto_quant/risk/: enhanced_manager.py  manager.py
crypto_quant/strategy/: base.py  grid.py  ma_cross.py  macd.py  rsi.py
crypto_quant/tests/: test_core.py
crypto_quant/utils/: api_client.py  constants.py  logger.py  rate_limiter.py  structured_logging.py  validators.py
frontend/: ARCHITECTURE.md  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts  vitest.config.ts
frontend/public/: demo.html
frontend/src/: App.vue  main.ts  vite-env.d.ts
frontend/src/components/: Icons.vue  MetricCard.vue  PlotlyChart.vue  QuantChart.vue  Sidebar.vue
frontend/src/react/components/: PlotlyChart.tsx
frontend/src/react/pages/: BacktestPage.tsx  LiveTradingPage.tsx  SandboxPage.tsx
frontend/src/router/: index.ts
frontend/src/shared/: api.ts  chartApi.ts  eventBus.ts  sharedStore.ts
frontend/src/styles/: global.css
tests/: conftest.py  test_backtest.py  test_more.py  test_risk_manager.py  test_strategies.py
(+9 files in other folders)
