[build-system]
requires = ["setuptools>=65.0", "wheel"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "crypto-quant-trading"
version = "1.0.0"
description = "虚拟货币量化交易系统，支持多交易所、多策略、回测与实盘交易"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [
    {name = "tuigou888"}
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Financial and Insurance Industry",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Office/Business :: Financial :: Investment",
]
dependencies = [
    "ccxt>=4.0.0,<4.2.0",
    "pandas>=2.0.0,<2.2.0",
    "numpy>=1.24.0,<1.27.0",
    "SQLAlchemy>=2.0.0,<2.1.0",
    "click>=8.1.0,<8.2.0",
    "rich>=13.0.0,<13.5.0",
    "pyyaml>=6.0,<6.1",
    "python-dotenv>=1.0.0,<1.1.0",
    "APScheduler>=3.10.0,<3.11.0",
    "Flask>=2.3.0,<2.4.0",
    "plotly>=5.15.0,<5.16.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0,<7.5.0",
    "pytest-cov>=4.1.0,<4.2.0",
    "mypy>=1.5.0,<1.6.0",
    "black>=23.0.0,<23.4.0",
    "isort>=5.12.0,<5.13.0",
    "flake8>=6.1.0,<6.2.0",
]
ta = [
    "TA-Lib>=0.4.28,<0.4.29",
]

[project.scripts]
crypto-quant = "crypto_quant.main:cli"

[tool.setuptools.packages.find]
where = ["crypto_quant"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short"

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
ignore_missing_imports = true

[tool.black]
line-length = 100
target-version = ["py310"]
include = '\.pyi?$'

[tool.isort]
profile = "black"
line_length = 100
multi_line_output = 3
